--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/divyake/moviesearch#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.4",
     "puppeteer": "^5.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
